# pbrnet

./: README.md  build_dataset.py  gen_js_infer.py  index.html  infer.py  infer_gui.py  pbr_net.pt  pbr_net.safetensors  pbr_previewer.html  pyproject.toml  train.py
old/: build_dataset.py  index.html  pbr_net.safetensors  train.py
